Changelog

Version 0.72 final
------------------

- (TODO: will support timed input)

Version 0.72 preview
--------------------

- translate_packed_address is multiplied by factor 4 in version 4
- dictionary is created and stored in MachineConfig
- show_status made illegal for version 4
- text styles added to the screen model
- object model extended
- toggable text buffering
- instruction decoder extended to allow for up to 8 parameters (evaluate the
  second optype byte)
- call_2s, call_1s, call_vs2, set_text_style, buffer_mode implemented
- screen splitting implemented using a sub window model

Version 0.7 Release (2005-11-16)
--------------------------------

- feature freeze for this release
- finally understood the difference between Z characters and ZSCII and
  added ZSCII encoding
- reduced stream output functions to one that puts out one ZSCII character
- reduced stream input functions to one that reads one ZSCII character
- added per-character stream output
- input and output now handled according to the standard
- applet frontend created
- successfully started "Hitchhiker's Guide"

Version 0.7 Preview 3 (2005-11-09)
-----------------------------------

- completely played through Zork I
- fixed an issue with removing objects from inconsistent trees, which caused
  "Leather goddesses" to freeze at a certain point
- improvements to the interface
- handling for header flags 1 and 2
- file input stream and transcript stream added
- consistency check for save games
- check for story file version
- no "open file" item anymore, loads a game at application start

Version 0.7 Preview 2 (2005-11-04)
-----------------------------------

- fixed an issue with keyboard event handling on Mac OS X
- routine stack and evaluation stack are changed to be lists, the stack
  pointers are implicit, so there is no fixed stack size anymore
- call and return scheme simplified
- restart, save and restore implemented (Quetzal 1.4)


Version 0.7 Preview 1 (2005-11-02)