@@ -43,9 +43,9 @@ public interface ScreenModel {
   static final int FONT_FIXED   = 4;
   
   /**
-   * Clears the screen.
+   * Resets the screen model.
    */
-  void clear();
+  void reset();
   
   /**
    * Splits the screen into two windows, the upper window will contain
@@ -76,6 +76,32 @@ public interface ScreenModel {
    * @param flag true if should be buffered, false otherwise
    */
   void setBufferMode(boolean flag);
+
+  /**
+   * Version 4/5: If value is 1, erase from current cursor position to the
+   * end of the line.
+   *  
+   * @param value the parameter
+   */
+  void eraseLine(int value);
+  
+  /**
+   * Clears the window with the specified number to the background color.
+   * If window is -1, the screen is unsplit and the area is cleared.
+   * If window is -2, the whole screen is cleared, but the splitting status
+   * is retained.
+   * 
+   * @param window the window number
+   */
+  void eraseWindow(int window);
+  
+  /**
+   * Moves the cursor in the current window to the specified position.
+   * 
+   * @param line the line
+   * @param column the column
+   */
+  void setCursor(int line, int column);
   
   /**
    * Returns the transcript output file.
@@ -90,4 +116,5 @@ public interface ScreenModel {
    * @return the input stream file
    */
   File getFileInputStreamFile();
+  
 }
